@@ -34,8 +34,8 @@
     "jambagecom/fh-debug": "self.version"
   },
   "require": {
-    "php": "^8.0",
-    "typo3/cms-core": "^11.5"
+    "php": "^7.4 || ^8.0",
+    "typo3/cms-core": "^10.4 || ^11.5"
   },
   "autoload": {
     "psr-4": {
