@@ -16,8 +16,8 @@ $EM_CONF[$_EXTKEY] = [
     'author_company' => 'jambage.com',
     'constraints' => [
         'depends' => [
-            'php' => '8.0.0-8.1.99',
-            'typo3' => '11.5.0-11.5.99',
+            'php' => '7.4.0-8.1.99',
+            'typo3' => '10.4.0-11.5.99',
         ],
         'conflicts' => [
         ],
